--- a/index.html
+++ b/index.html
@@ -105,5 +105,6 @@
 
     <!-- ================== SCRIPTS JAVASCRIPT =================== -->
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/traduction.js"></script>
   </body>
 </html>
