ajouter objet langue

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- BOUTONS DE NAVIGATION -->
       <div class="nav-buttons" id="navMenu">
         <button class="demo-btn" data-i18n="demo">Démo</button>
-        <button class="signup-btn" data-i18n="signup">S’inscrire</button>
+        <a href="login.html"><button class="signup-btn" data-i18n="signup">S’inscrire</button></a>
         <i class="fa-regular fa-user icon"></i>
         <div class="separator">|</div>
 
@@ -57,7 +57,7 @@
     <!-- ================== CONTENU PRINCIPAL START =================== -->
     <main class="home-container">
       <h1 class="title" data-i18n="welcome">BIENVENU AU VANILLA TYPING</h1>
-      <hr class="divider"/>
+      <hr class="divider-container"/>
 
       <!-- ========== SECTION NIVEAU DE DIFFICULTÉ ========== -->
       <section class="difficulty-section">
