--- a/typing-test.html
+++ b/typing-test.html
@@ -83,7 +83,7 @@
           </div>
           <div class="stat-content">
             <span class="stat-value" id="wordCount">0</span>
-            <span class="stat-label">Mots réussis</span>
+            <span class="stat-label" data-i18n="correct_words">Mots réussis</span>
           </div>
         </div>
 
