--- a/index.html
+++ b/index.html
@@ -2,20 +2,16 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla Typing</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Bienvenue | Vanilla Typing</title>
     <!-- ========== FEUILLES DE STYLES ========== -->
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="stylesheet" href="assets/css/responsive.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="assets/css/styles.css"/>
+    <link rel="stylesheet" href="assets/css/responsive.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
     <!-- ========== BIBLIOTHÈQUE D'ANIMATION GSAP ========== -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
   </head>
-
   <body>
     <!-- ================== BARRE DE NAVIGATION START =================== -->
     <nav class="navbar">
@@ -35,10 +31,19 @@
       <!-- BOUTONS DE NAVIGATION -->
       <div class="nav-buttons" id="navMenu">
         <button class="demo-btn" id="demoBtn" data-i18n="demo">Démo</button>
-        <div id="userMenu" class="hidden">
-          <span id="usernameDisplay">Utilisateur</span>
-          <button id="logoutBtn">Se déconnecter</button>
-          <button id="scoreBtn">Score</button>
+        <div id="userMenu" class="user-menu">
+          <span id="usernameDisplay">
+            <i class="fa-solid fa-user"></i>
+            <strong data-i18n="user">Utilisateur</strong>
+          </span>
+          <button id="scoreBtn" class="user-btn">
+            <i class="fa-solid fa-chart-line"></i>
+            <span data-i18n="score">Score</span>
+          </button>
+          <button id="logoutBtn" class="user-btn danger">
+            <i class="fa-solid fa-right-from-bracket"></i>
+            <span data-i18n="logout">Déconnexion</span>
+          </button>
         </div>
         <button class="signup-btn" data-i18n="signup">S’inscrire</button>
         <i class="fa-regular fa-user icon"></i>
@@ -50,12 +55,6 @@
             <img id="flagIcon" src="assets/image/fr.jpg" alt="FR" >
             <span id="languageCode">FR</span>
           </button>
-        </div>
-        <!-- INTERRUPTEUR POUR LE THÈME SOMBRE/CLAIR -->
-        <div class="theme-toggle-switch" id="theme-switch">
-          <div class="toggle-thumb" id="toggle-thumb">
-            <i class="fa-solid fa-sun" id="theme-icon"></i>
-          </div>
         </div>
       </div>
     </nav>
@@ -109,9 +108,7 @@
       </section>
     </main>
     <!-- ================== CONTENU PRINCIPAL END =================== -->
-
-  
-  </body>
+     
   <!-- ========== MODAL DE CONNEXION (POPUP) ========== -->
 <div class="login-modal hidden" id="loginModal">
   <div class="login-modal-content">
@@ -120,28 +117,24 @@
       <span class="close-login" id="closeLogin">&times;</span>
       <h2>👋 Bienvenue</h2>
       <p>Connectez-vous à votre compte</p>
-
       <form id="loginForm">
         <label for="email">Email</label>
         <div class="input-box">
           <i class="fas fa-envelope"></i>
           <input type="email" id="email" name="email" placeholder="Entrer votre email" required>
         </div>
-
         <label for="password">Mot de passe</label>
         <div class="input-box">
           <i class="fas fa-lock"></i>
           <input type="password" id="password" name="password" placeholder="Entrer votre mot de passe" required>
         </div>
-
         <a href="#" class="forgot">Mot de passe oublié ?</a>
-
         <button type="submit" class="login-btn">
           <i class="fas fa-sign-in-alt"></i> Se connecter
         </button>
-
-        <div class="divider"><span>ou continuer avec</span></div>
-
+        <div class="divider">
+          <span>ou continuer avec</span>
+        </div>
         <div class="social-icons">
           <i class="fab fa-google"></i>
           <i class="fab fa-facebook-f"></i>
@@ -151,8 +144,9 @@
     </div>
 </div>
   <!-- ================== SCRIPTS JAVASCRIPT =================== -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="assets/js/main.js"></script>
   <script src="assets/js/script.js"></script>
-  <script src="assets/js/traduction.js"></script>
   <script src="assets/js/animation.js"></script>
 </body>
 </html>
